<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".OutputActivity">

    <TextView
        android:id="@+id/textViewKodeBarang"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/kodebrg"
        android:textSize="18sp"/>

    <TextView
        android:id="@+id/textViewNamaBarang"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/namabrg"
        android:textSize="18sp"/>

    <TextView
        android:id="@+id/textViewHarga"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/harga"
        android:textSize="18sp"/>

    <TextView
        android:id="@+id/textViewJumlahBarang"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/jumlahbrg"
        android:textSize="18sp"/>

    <TextView
        android:id="@+id/textViewTotalHarga"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/totalharga"
        android:textSize="18sp"/>

    <TextView
        android:id="@+id/textViewDiskonHarga"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/diskharga"
        android:textSize="18sp"/>

    <TextView
        android:id="@+id/textViewDiskonMember"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/diskmem"
        android:textSize="18sp"/>

    <TextView
        android:id="@+id/textViewJumlahBayar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/jmlbyr"
        android:textSize="18sp"/>

    <Button
        android:id="@+id/shareButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/btnbagibukti" />

</LinearLayout>
